--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "press-pay-test",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "tsc && node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
     "express-rate-limit": "^5.2.6",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^15.0.2"
   }
 }
