Turn strict mode on

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^15.0.2"
+    "@types/node": "^15.0.2",
+    "@types/request-promise": "^4.1.47"
   }
 }
